# demo-multiimport

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose-base.yml  docker-compose.yml  requirements.txt
demo/: admin.py  models.py  settings.py
demo/aggregator/management/commands/: aggregator_worker.py
demo/fixtures/: initial.json
demo/migrations/: 0001_initial.py
demo/rssgenerator/: app.py  rssgen.py
demo/rssnews/: __init__.py  admin.py  models.py  tests.py
demo/rssnews/migrations/: 0001_initial.py
demo/tests/: __init__.py
lib-demo/: README.md  setup.cfg
lib-demo/mapper/: __init__.py  base.py  rss.py
lib-demo/tests/: models.py  settings.py  test_mapper_base.py  test_mapper_rss.py
