[metadata]
name = demo-mapper
version = 1.0
url = https://github.com/ykshatroff/demo-multiimport
author = Y.K.Shatroff
author_email = admin@localhost
description = Demo Mapper Library
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6

[options]
packages = find:
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django
install_requires =
    Django>=2.0,<2.1

[options.packages.find]
exclude =
    tests

[aliases]
test = pytest

[tool:pytest]
testpaths = tests/
DJANGO_SETTINGS_MODULE = tests.settings